<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_test"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TestMedia">
        <TextView
            android:id="@+id/text_val"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:maxLines="5"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/file_content"
            />
        <Button
            android:id="@+id/media_clear_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_text"
            app:layout_constraintTop_toBottomOf="@id/text_val"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:id="@+id/media_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write"
            app:layout_constraintTop_toBottomOf="@id/media_clear_txt"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/media_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read"
            app:layout_constraintTop_toBottomOf="@id/media_write"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/media_read_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_other"
            app:layout_constraintTop_toBottomOf="@id/media_read"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:id="@+id/media_list_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_file_100"
            app:layout_constraintTop_toBottomOf="@id/media_read_other"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>