<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_test"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SafExampleActivity">
        <TextView
            android:id="@+id/text_val"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/file_content"
            />

        <Button
            android:id="@+id/saf_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            app:layout_constraintTop_toBottomOf="@id/text_val"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/saf_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open"
            app:layout_constraintTop_toBottomOf="@id/saf_create"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>